add new get txs api
